# gcm-rs

./: .gitignore  .pre-commit.config.yaml  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml
py/: __init__.py
python/gcm_rs/: __init__.py
rust/: ctr.rs  gcm.rs  lib.rs  random.rs  types.rs
scripts/: conventional-commits  pre-commit
src/: constants.rs  ctr.rs  error.rs  gcm.rs  lib.rs  types.rs
