
[package]
name = "gcm_rs"
version = "1.0.0-beta"
authors = ["ashrefgw@proton.me"]
edition = "2021"
description = "AES-256 GCM"
repository = "https://github.com/ashgw/gcm_rs"
license = "GPL-3.0"

[lib]
name = "gcm_rs"
path = "packages/rust/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[dependencies]
aes = { version = "0.8.3", features = ["zeroize"] }
ctr = { version = "0.9.2", features = ["zeroize"] }
ghash = { version = "0.5.0", features = ["zeroize"] }
subtle = "2.3"
anyhow = "1.0.86"
pyo3 = { version = "0.18", features = ["extension-module", "abi3", "abi3-py37"] }
getrandom = "0.2"


